--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: insta_personal_page_lego
-description: "insta style personal page by june"
+description: "lego is all you need"
 #publish_to: 'none'
 repository: https://github.com/flutter-lego/insta_personal_page_lego
 
-version: 1.0.0
+version: 1.0.1
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -11,23 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: #@add
-  gap: ^3.0.1 #@add
-  june_flow_util:
-  styled_widget: ^0.4.1 #@add
+  june_flow_util: #@add
+  styled_widget: #@add
   modal_bottom_sheet: #@add
-  keyboard_attachable: #@add
-  flutter_zoom_drawer: #@add
-  flutter_screenutil:
-  bot_toast:
+  gap: #@add
+  flutter_svg: #@add
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:
-  screenutil_lego: #@add
-  bot_toast_lego: #@add
-  widget_binding_lego: #@add
 
 flutter:
   assets:
