--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: insta_personal_page_lego
-description: "lego is all you need"
+description: "beautiful insta personal page lego"
 #publish_to: 'none'
 repository: https://github.com/flutter-lego/insta_personal_page_lego
 
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
